correcion del .env.example

--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,7 @@
 PORT=3000
-JWT_SECRET=clave-secreta
+JWT_SECRET=andres1998
+DB_HOST = localhost
+DB_PORT = 3306
+DB_USER = root
+DB_PASSWORD =rootpass
+DB_DATABASE = login_nodex
